# pplx-spa-assets-knowledge

./: .copilot-instructions.md  .gitignore  ANALYZE_FEATURE_SUMMARY.md  ARCHITECTURE.md  BROWSER_AUTOMATION.md  CHANGELOG.md  CONTEXTUAL_SCAN_RESULTS.json  DEVTOOL_README.md  KNOWLEDGE_BASE.md  QUICKSTART.md  README.md  README_old.md  ROADMAP.md  SUMMARY.md  automcp.config.example.json  endpoint_to_source_mapping.json  js_sources_full.json  knowledge_base_meta.json  package-lock.json  package.json  package.json.browser-update  package.json.updated  perplexity_api_complete_spec.json  perplexity_api_spec_with_code_refs.json  pplx-stream-analysis.json  requirements.txt  spec_analyzer.py  tsconfig.json  vite.config.ts
.github/workflows/: build-userscript.yml
examples/: README.md  analyze-example.md  browser-workflow.ts  manifest-generator.ts  pipeline.sh
ext/pplx-capture/: background.js  content.js  inject.js  manifest.json
pplx-spa-analyzer/: .gitignore  README.md  pyproject.toml
pplx-spa-analyzer/src/pplx_analyzer/: __init__.py
pplx-spa-analyzer/src/pplx_analyzer/models/: __init__.py  api.py  har.py  modules.py
scripts/: graphql_extractor.py  har_to_openapi.py  ws_schema_extractor.py
spa-assets/: abap-C_5XjhZ_.js  abnf-DdTP4g1m.js
spa-assets/_restricted/: restricted-feature-health-C3bMKSvM.js  restricted-feature-notes-BquE_m0a.js
src/: cli.ts
src/browser/: anti-bot-analyzer.ts  browser-automation.ts  capture-config.ts  cdp-client.ts  request-replayer.ts  state-manager.ts
src/devtool/: main.ts
src/fetchers/: asset-fetcher.ts
src/types/: index.ts
(+15 files in other folders)
